OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/serving-tests/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.6.4-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.6.4-1-2","maistra-version":"2.4.13","maistra.io/owner":"istio-system","maistra.io/owner-n [...]
      maistra.io/mesh-generation: 2.6.4-1-2
    creationTimestamp: "2025-01-09T14:46:13Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.13
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2025-01-09T14:46:13Z"
    name: istio-expose-route-basic
    namespace: serving-tests
    resourceVersion: "43521"
    uid: 3acb9087-c315-42e2-82b5-4d942dbd11f5
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector:
      matchLabels:
        maistra.io/expose-route: "true"
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.6.4-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.6.4-1-2","maistra-version":"2.4.13","maistra.io/owner":"istio-system","maistra.io/owner-n [...]
      maistra.io/mesh-generation: 2.6.4-1-2
    creationTimestamp: "2025-01-09T14:46:13Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.13
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2025-01-09T14:46:13Z"
    name: istio-mesh-basic
    namespace: serving-tests
    resourceVersion: "43533"
    uid: 222e1076-cd3d-4976-9546-7f4618fdc2b4
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            maistra.io/member-of: istio-system
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app":"webhook"},"name":"metadata-webhook","namespace":"serving-tests"},"spec":{"ingress":[{}],"podSelector":{"matchLabels":{"app":"webhook"}}}}
    creationTimestamp: "2025-01-09T14:58:19Z"
    generation: 1
    labels:
      app: webhook
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2025-01-09T14:58:19Z"
    name: metadata-webhook
    namespace: serving-tests
    resourceVersion: "51800"
    uid: 2bcbc63e-ac3e-42fe-8b50-65e7bae221e6
  spec:
    ingress:
    - {}
    podSelector:
      matchLabels:
        app: webhook
    policyTypes:
    - Ingress
kind: NetworkPolicyList
metadata:
  resourceVersion: "60835"
